# METIS_Pipeline

./: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  Pipfile  README.md  Readme.md  architecture_report.md  init.sh  runner.py
metisp/: CMakeLists.txt  Doxyfile.in  Makefile.am  NEWS  README.md  acinclude.m4  bootstrap  configure.ac  metis_pupil_imaging.lm.sof
metisp/admin/: doxygen.am  python.am
metisp/cmake/: EsoPipelinePackage.cmake  FindCPL.cmake  FindHDRL.cmake  cmake_uninstall.cmake  config.h.cmake
metisp/doxygen/: mainpage.doc
metisp/hdrl/: Makefile.am  acinclude.m4  autogen.sh  bootstrap  configure.ac  hdrl.h  hdrl_DER_SNR.c  hdrl_DER_SNR.h  hdrl_barycorr.c  hdrl_barycorr.h  hdrl_bpm_2d.c  hdrl_bpm_2d.h  hdrl_bpm_3d.c  hdrl_bpm_3d.h  hdrl_bpm_fit.c  hdrl_bpm_fit.h  hdrl_bpm_utils.c  hdrl_bpm_utils.h  hdrl_buffer.c  hdrl_buffer.h  hdrl_catalogue.c  hdrl_catalogue.h  hdrl_collapse.c  hdrl_collapse.h  hdrl_combine.c  hdrl_combine.h  hdrl_correlation.c  hdrl_correlation.h  hdrl_dar.c  hdrl_dar.h  hdrl_download.c  hdrl_download.h  hdrl_efficiency.c  hdrl_efficiency.h  hdrl_elemop.c  hdrl_elemop.h  hdrl_fit.c  hdrl_fit.h  hdrl_flat.c  hdrl_flat.h  (+62 more)
metisp/hdrl/catalogue/: Makefile.am  hdrl_cat_apclust.c  hdrl_cat_apclust.h  hdrl_cat_apio.c  hdrl_cat_apio.h  hdrl_cat_apline.c  hdrl_cat_apline.h  hdrl_cat_areals.c  hdrl_cat_areals.h  hdrl_cat_background.c  hdrl_cat_background.h  hdrl_cat_casu.c  hdrl_cat_casu.h  hdrl_cat_classify.c  hdrl_cat_classify.h  hdrl_cat_conf.c  hdrl_cat_conf.h  hdrl_cat_def.h  hdrl_cat_extend.c  hdrl_cat_extend.h  hdrl_cat_filter.c  hdrl_cat_filter.h  hdrl_cat_moments.c  hdrl_cat_moments.h  hdrl_cat_overlp.c  hdrl_cat_overlp.h  hdrl_cat_phopt.c  hdrl_cat_phopt.h  hdrl_cat_polynm.c  hdrl_cat_polynm.h  hdrl_cat_radii.c  hdrl_cat_radii.h  hdrl_cat_seeing.c  hdrl_cat_seeing.h  hdrl_cat_solve.c  hdrl_cat_solve.h  hdrl_cat_statistics.c  hdrl_cat_statistics.h  hdrl_cat_table.c  hdrl_cat_table.h  (+6 more)
metisp/hdrl/doc/: CC_Buffer.tex  CC_ImageLists.tex  CC_Images.tex  CC_Spectrum1D.tex  Cook_Parameters.tex  Cookbook.tex  CoreConcepts.tex  Func_Airmass.tex  Func_BP.tex  Func_Barycorr.tex  Func_Bias.tex  Func_Catalogue.tex  Func_Dark.tex  Func_Efficiency.tex  Func_Flat.tex  Func_Fring.tex  Func_MagLim.tex  Func_Overscan.tex  Func_Patternnoise.tex  Func_Refraction.tex  Func_Resampling.tex  Func_Response.tex  Func_Strehl.tex  Functionalities.tex  GeneralUtilities.tex  Introduction.tex  Makefile  MasterDark.tex  SoftwareInfrastructure.tex  Theory_BP.tex  Theory_Catalogue.tex  Theory_Efficiency.tex  Theory_Fringing.tex  Theory_General.tex  Theory_MagLim.tex  Theory_Patternnoise.tex  Theory_Refraction.tex  Theory_Resampling.tex  Theory_Response.tex  abbreviations.tex  (+7 more)
metisp/hdrl/m4macros/: cpl-pipeline.m4  erfa_pkg.m4  eso.m4  libcurl_pkg.m4  telluriccorr.m4  yorick.m4
metisp/hdrl/tests/: Makefile.am  hdrl_barycorr-test.c  hdrl_bpm_2d-test.c  hdrl_bpm_3d-test.c  hdrl_bpm_fit-test.c  hdrl_bpm_utils-test.c  hdrl_buffer-test.c  hdrl_catalogue-test.c  hdrl_collapse-test.c  hdrl_combine-test.c  hdrl_correlation-test.c  hdrl_dar-test.c  hdrl_der_snr-test.c  hdrl_download-test.c  hdrl_efficiency-test.c  hdrl_elemop-test.c  hdrl_fit-test.c  hdrl_flat-test.c  hdrl_fpn-test.c  hdrl_frameiter-test.c  hdrl_fringe-test.c  hdrl_image-test.c  hdrl_imagelist_basic-test.c  hdrl_imagelist_io-test.c  hdrl_imagelist_view-test.c  hdrl_lacosmics-test.c  hdrl_maglim-test.c  hdrl_mode-test.c  hdrl_multiiter-test.c  hdrl_overscan-test.c  hdrl_parameter-test.c  hdrl_prototyping-test.c  hdrl_random-test.c  hdrl_resample-test.c  hdrl_response-test.c  hdrl_sigclip-test.c  hdrl_spectrum1d-test.c  hdrl_spectrum1d_shift-test.c  hdrl_spectrum1dlist-test.c  hdrl_strehl-test.c  (+1 more)
metisp/irplib/: Makefile.am  irplib_calib.c  irplib_calib.h  irplib_cat.c  irplib_cat.h  irplib_distortion.c  irplib_distortion.h  irplib_fft.c  irplib_fft.h  irplib_flat.c  irplib_flat.h  irplib_framelist.c  irplib_framelist.h  irplib_hist.c  irplib_hist.h  irplib_ksigma_clip.c  irplib_ksigma_clip.h  irplib_ksigma_clip_body.h  irplib_match_cats.c  irplib_match_cats.h  irplib_mkmaster.c  irplib_mkmaster.h  irplib_oddeven.c  irplib_oddeven.h  irplib_plugin.c  irplib_plugin.h  irplib_polynomial.c  irplib_polynomial.h  irplib_ppm.c  irplib_ppm.h  irplib_sdp_spectrum.c  irplib_sdp_spectrum.h  irplib_slitpos.c  irplib_slitpos.h  irplib_spectrum.c  irplib_spectrum.h  irplib_stdstar.c  irplib_stdstar.h  irplib_strehl.c  irplib_strehl.h  (+9 more)
metisp/irplib/tests/: Makefile.am  irplib_cat-test.c  irplib_framelist-test.c  irplib_hist-test.c  irplib_match_cats-test.c  irplib_plugin-test.c  irplib_polynomial-test.c  irplib_sdp_spectrum-test.c  irplib_strehl-test.c  irplib_utils-test.c  irplib_wcs-test.c  irplib_wlxcorr-test.c
metisp/m4/: cext.m4  cpl.m4  gsl.m4  hdrl.m4  molecfit.m4  qfits.m4
metisp/metis/: CMakeLists.txt  Makefile.am  metis_dfs.c  metis_dfs.h  metis_pfits.c  metis_pfits.h  metis_utils.c  metis_utils.h
metisp/metis/tests/: Makefile.am  metis_dfs-test.c  metis_pfits-test.c
metisp/metis_reg/: rrrecipe.yaml  rrrecipe_calib.yaml
metisp/metis_reg/sof/: 111.rrrecipe.sof
metisp/pymetis/: .env  CMakeLists.txt  Makefile.am  README.md  architecture_report.md  base.py  masterdark.py  pyproject.toml  rawimage.py  setup.cfg  setup.cfg.in
metisp/pymetis/docs/: conf.py  requirements.txt
metisp/pymetis/mixins/: masterflat.py  wavecal.py
metisp/pymetis/sof/: basicreduction.sof  detlin.sof  masterflat-n.sof
metisp/pymetis/src/: flat.py
metisp/pymetis/tests/: test_metis_det_dark.py  test_metis_det_lingain.py  test_metis_ifu_reduce.py  test_metis_n_img_flat.py
metisp/pyrecipes/: CMakeLists.txt  Makefile.am  __init__.py  base.py  metis_det_dark.py  metis_det_lingain.py  metis_recipes.py
metisp/pyrecipes/ifu/: metis_ifu_calibrate.py  metis_ifu_distortion.py  metis_ifu_postprocess.py  (+2 more)
metisp/recipes/: CMakeLists.txt  Makefile.am  metis.c  metis_calib.c
metisp/reflex/: Makefile.am  create_demo_data.py  metis.xml.in  metis_wkf.oca  xml2in.pl
metisp/regtests/: Makefile.am
metisp/workflows/: Makefile.am  metis
(+1263 files in other folders)
