[project]
name = "pymetis"
version = "0.1.0"
description = "METIS pipeline"
authors = [
    {name = "martin.balaz@univie.ac.at"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
  "pycpl==1.0.3.post1",   # prefer ivh's re-packaged pycpl
  "edps",
  "pyesorex",
  "adari_core",
  "scopesim",
  "scopesim_templates"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
extra-index-url = [
  "https://ivh.github.io/pycpl/simple/",
  "https://ftp.eso.org/pub/dfs/pipelines/libraries/"
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "edps: marks EDPS tests that usually take a long time (deselect with '-m \"not edps\"')",
    "inputset: marks tests related to `InputSet`",
    "external: marks test that require external data (usually from simulations)",
    "dataitem: marks tests related to data items",
    "product: marks tests related to `PipelineProduct`",
    "recipe: marks tests related to `MetisRecipe` or `MetisRecipeImpl`",
    "config: marks global configuration tests",
    "pyesorex: marks tests that depend on `pyesorex`",
    "slow: marks tasts with full-size data",
    "metadata: marks tests that verify recipe metadata",
]
