[build-system]
requires = [
    "setuptools >= 45",
]
build-backend = "setuptools.build_meta"

[project]
name = "pymetis"
version = "0.0.1"
dynamic = ["description","requires-python","license","authors","classifiers","urls","dependencies","optional-dependencies"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "edps: marks EDPS tests that usually take a long time (deselect with '-m \"not edps\"')",
    "inputset: marks tests related to `InputSet`",
    "external: marks test that require external data (usually from simulations)",
    "dataitem: marks tests related to data items",
    "product: marks tests related to `PipelineProduct`",
    "recipe: marks tests related to `MetisRecipe` or `MetisRecipeImpl`",
    "config: marks global configuration tests",
    "pyesorex: marks tests that depend on `pyesorex`",
    "slow: marks tasts with full-size data",
    "metadata: marks tests that verify recipe metadata",
]
